fix layout issues

--- a/client/src/pages/LandingPage/index.css
+++ b/client/src/pages/LandingPage/index.css
@@ -1,1 +1,5 @@
 @import '../../styles/index.css';
+
+.LandingPage .container .Header {
+    display: none;
+}
